--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <!--模块声明:这里声明多个子模块-->
     <modules>
-        <module>zz-web</module>
+        <module>spider-web</module>
     </modules>
 
     <!--版本管理，这里统一管理依赖的版本号-->
@@ -31,7 +31,7 @@
         <dependencies>
             <dependency>
                 <groupId>com.jiliwangluo</groupId>
-                <artifactId>zz-web</artifactId>
+                <artifactId>spider-web</artifactId>
                 <version>0.0.1</version>
             </dependency>
         </dependencies>
