--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <!--模块声明:这里声明多个子模块-->
     <modules>
         <module>spider-web</module>
+        <module>spider-api</module>
     </modules>
 
     <!--版本管理，这里统一管理依赖的版本号-->
@@ -32,6 +33,11 @@
             <dependency>
                 <groupId>com.jiliwangluo</groupId>
                 <artifactId>spider-web</artifactId>
+                <version>0.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jiliwangluo</groupId>
+                <artifactId>spider-api</artifactId>
                 <version>0.0.1</version>
             </dependency>
         </dependencies>
